4B/cs444/tests/pass/pass_staticfielddeclaration.joos
/* pass: static field declaration */
public class A {
  protected static int x;
}

