4B/cs444/tests/fail/fail_omittedfinalfieldinitializer.joos
/* fail: omitted final field initializer */
public class A {
  protected final int x /* = 0 */;
}

